--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-160.8KB/s(Youtube:不良林), server: 38.64.138.145, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-178.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.53MB/s(Youtube:不良林), server: 149.202.82.172, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.68.135.19, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林), server: 213.183.53.222, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇬🇧 英国-577.9KB/s(Youtube:不良林), server: 172.99.190.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-845.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇫🇷 法国-151.8KB/s(Youtube:不良林), server: 149.202.82.172, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-391.0KB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇬🇧 英国-565.9KB/s(Youtube:不良林), server: 172.99.190.39, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-370.1KB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-177.8KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-160.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-178.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-160.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-178.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-160.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-178.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-160.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-178.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-160.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-178.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-160.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-178.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-160.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-178.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
