--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林), server: 213.183.53.222, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇫🇷 法国-435.2KB/s(Youtube:不良林), server: 149.202.82.172, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.64.138.145, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1018.2KB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-295.2KB/s(Youtube:不良林), server: 145.239.1.100, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇬🇧 英国-577.9KB/s(Youtube:不良林), server: 172.99.190.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-845.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇫🇷 法国-151.8KB/s(Youtube:不良林), server: 149.202.82.172, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇯🇵 日本-391.0KB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇬🇧 英国-565.9KB/s(Youtube:不良林), server: 172.99.190.39, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-370.1KB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1018.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-295.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1018.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-295.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1018.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-295.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1018.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-295.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1018.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-295.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1018.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-295.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇫🇷 法国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1018.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-295.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇬🇧 英国-577.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-845.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-151.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
