--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-989.7KB/s(Youtube:不良林), server: 38.114.114.69, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-391.0KB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-742.5KB/s(Youtube:不良林), server: 149.202.82.172, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇬🇧 英国-1.03MB/s(Youtube:不良林), server: 172.99.190.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-1.48MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-379.1KB/s(Youtube:不良林), server: 38.64.138.145, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇬🇧 英国-261.7KB/s(Youtube:不良林), server: 172.99.190.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-244.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-547.9KB/s(Youtube:不良林), server: 185.246.155.23, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
   - {name: 🇺🇸 美国-662.3KB/s(Youtube:不良林), server: 38.64.138.145, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-385.1KB/s(Youtube:不良林), server: 38.121.43.71, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-839.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-370.1KB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-150.3KB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-989.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-742.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-839.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-150.3KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-989.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-742.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-839.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-150.3KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-989.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-742.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-839.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-150.3KB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-989.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-742.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-839.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-150.3KB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-989.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-742.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-839.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-150.3KB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-989.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-742.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-839.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-150.3KB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-989.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-742.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-261.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-662.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-839.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-370.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-150.3KB/s(Youtube:不良林)
